[project]
name = "pairtools"
version = "1.0.1"
description = "CLI tools to process mapped Hi-C data"
keywords = ["genomics", "bioinformatics", "Hi-C", "contact"]
readme = "README.md"
authors = [
    {name = "Open2C", email = "open.chromosome.collective@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.7"
dependencies = [
    "bioframe>=0.3.3",
    "click>=6.6",
    "cython",
    "numpy>=1.10",
    "pandas>=1.3.4",
    "pysam>=0.15.0",
    "pyyaml",
    "scipy>=1.7.0",
]
license = {text = "MIT"}
dynamic = ['entry-points']

[project.urls]
Homepage = "https://github.com/open2c/pairtools"

[project.scripts]
pairtools = "pairtools.cli:cli"

[build-system]
requires = ["setuptools", "wheel", "cython", "pysam>=0.15.0", "numpy>=1.10"]
build-backend = "setuptools.build_meta"
